# detect

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  detect.c  detect.cpp
.devcontainer/: devcontainer.json
.devcontainer/imx8mpevk/: devcontainer.json
.github/workflows/: debian.yml  main.yml  release.yml
cmake/: Version.cmake
